--- a/MD/kulinerin/app/src/main/AndroidManifest.xml
+++ b/MD/kulinerin/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bangkit2022.kulinerin">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +14,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Kulinerin">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.camera.ResultCameraActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.camera.CameraActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,13 +29,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".auth.RegisterActivity"
+            android:name=".ui.auth.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".auth.LoginActivity"
+            android:name=".ui.auth.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".OnBoarding"
+            android:name=".ui.OnBoarding"
             android:exported="false" />
     </application>
 
