--- a/MD/kulinerin/app/src/main/AndroidManifest.xml
+++ b/MD/kulinerin/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Kulinerin">
         <activity
+            android:name=".ui.navigation.food.DetailFoodActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.navigation.food.FoodActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.camera.ResultCameraActivity"
             android:exported="false" />
         <activity
