--- a/MD/kulinerin/app/build.gradle
+++ b/MD/kulinerin/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-parcelize'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 android {
@@ -38,6 +39,7 @@ android {
 dependencies {
 
     implementation 'androidx.camera:camera-core:1.0.2'
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
     def camerax_version = "1.2.0-alpha01"
 
     // UI
