--- a/MD/kulinerin/app/src/main/AndroidManifest.xml
+++ b/MD/kulinerin/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     package="com.bangkit2022.kulinerin">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-feature android:name="android.hardware.camera" />
+
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
@@ -14,16 +16,28 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Kulinerin">
         <activity
-            android:name=".ui.navigation.food.DetailFoodActivity"
+            android:name=".ui.food.history.HistoryFoodActivity"
+            android:exported="false" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDwmoBJHEeV61GJcoGWI2qdtDmTxLbYMRY" />
+
+        <activity
+            android:name=".ui.food.restaurant.RestaurantMapsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_restaurant_maps" />
+        <activity
+            android:name=".ui.food.DetailFoodActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.navigation.food.FoodActivity"
+            android:name=".ui.food.FoodActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.camera.ResultCameraActivity"
+            android:name=".ui.navigation.camera.ResultCameraActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.camera.CameraActivity"
+            android:name=".ui.navigation.camera.CameraActivity"
             android:exported="false" />
         <activity
             android:name=".ui.MainActivity"
