--- a/MD/kulinerin/app/src/main/AndroidManifest.xml
+++ b/MD/kulinerin/app/src/main/AndroidManifest.xml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.bangkit2022.kulinerin">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <uses-feature android:name="android.hardware.camera" />
 
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Kulinerin">
+        android:theme="@style/Theme.Kulinerin"
+        tools:targetApi="m">
         <activity
             android:name=".ui.food.history.HistoryFoodActivity"
             android:exported="false" />
@@ -40,15 +45,6 @@
             android:name=".ui.navigation.camera.CameraActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
             android:name=".ui.auth.RegisterActivity"
             android:exported="false" />
         <activity
@@ -56,7 +52,18 @@
             android:exported="false" />
         <activity
             android:name=".ui.OnBoarding"
-            android:exported="false" />
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".ui.MainActivity"
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
